--- a/stylesheets/scss/components/_data-tables.scss
+++ b/stylesheets/scss/components/_data-tables.scss
@@ -12,6 +12,9 @@ $table-checkbox-size: rem-calc(18px);
 
 table {
 	border-collapse: collapse;
+	white-space: nowrap;
+	overflow: auto;
+	display: block;
 
 	thead th {
 		color: rgba($black, .54);
@@ -20,11 +23,11 @@ table {
 		height: $table-header-size;
 		line-height: $table-header-size;
 		text-align: left;
-		margin: 0 $table-column-padding 0 0;
+		padding-right: $table-column-padding;
 		@include box-sizing(border-box);
 
 		&:last-of-type {
-			padding: 0 $table-first-column-padding 0 0;
+			padding-right: $table-first-column-padding;
 		}
 
 		&:hover {
@@ -48,6 +51,8 @@ table {
 
 	.sc-numeric-col {
 		text-align: right;
+		padding-left: $table-column-padding;
+		padding-right: 0;
 	}
 
 	.sc-checkbox-col {
@@ -64,6 +69,51 @@ table {
 
 			&:hover {
 				background: $grey-200;
+			}
+		}
+	}
+
+	&.sc-table-responsive {
+		@media #{$medium-down} {
+			width: 100%;
+			border-collapse: collapse;
+			border-spacing: 0;
+			display: block;
+			position: relative;
+
+			thead {
+				display: block;
+				float: left;
+
+				tr {
+					display: block;
+
+					th {
+						display: block;
+						text-align: right;
+						vertical-align: top;
+					}
+				}
+			}
+
+			tbody {
+				display: block;
+				width: auto;
+				position: relative;
+				overflow-x: auto;
+				white-space: nowrap;
+
+				tr {
+					display: inline-block;
+					vertical-align: top;
+
+					td {
+						display: block;
+						text-align: left;
+						vertical-align: top;
+						min-height: $table-header-size;
+					}
+				}
 			}
 		}
 	}
