--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -26,7 +26,7 @@
 @import 'components/data-tables'; // Used to style tables (can be turned off)
 @import 'components/dialogs'; // Used to style dialog (can be turned off)
 @import 'components/expansion-panels'; // Used to style expansion panels (can be turned off)
-//@import 'components/drawer'; // Navigation drawer (can be turned off)
+@import 'components/grid-lists'; // Used to style grid lists (can be turned off)
 @import 'components/navigation-drawer'; // Used to style navigation drawer (can be turned off)
 @import 'components/lists'; // Used to style lists (can be turned off)
 @import 'components/notifications'; // Notifications style (can be turned off)
