--- a/stylesheets/scss/components/_functions.scss
+++ b/stylesheets/scss/components/_functions.scss
@@ -1,13 +1,9 @@
 @function rem-calc( $size, $font-size : $font-size ) {
-	$font-size: $font-size + 0px;
-	$remSize: $size / $font-size;
-	@return #{$remSize}rem;
+	@return $size / ($font-size + 0px) * 1rem;
 }
 
 @function em-calc( $size, $font-size : $font-size ) {
-	$font-size: $font-size + 0px;
-	$emSize: $size / $font-size;
-	@return #{$emSize}em;
+	@return $size / ($font-size + 0px) * 1em;
 }
 
 @function decimal-round( $number, $digits: 0, $mode: round ) {
