--- a/stylesheets/scss/components/_normalize.scss
+++ b/stylesheets/scss/components/_normalize.scss
@@ -11,10 +11,7 @@ html, body {
 }
 
 html {
-	// Firefox only
-	@-moz-document url-prefix() {
-		font-size: #{$font-size}px; // TODO should be turned on but off looks better
-	}
+	font-size: #{$font-size}px;
 }
 
 label {
@@ -104,16 +101,19 @@ main {
 
 	@media #{$small-up} {
 		top: rem-calc(56px);
-
 	}
 
 	@media only screen and (min-width: 600px) {
 		padding: $large-gutter;
 	}
 
+	@media #{$medium-only} {
+		left: $drawer-medium-width;
+	}
+
 	@media #{$medium-up} {
-		left: rem-calc(320px);
 		top: rem-calc(64px);
+		left: $drawer-small-width;
 	}
 }
 
