--- a/stylesheets/scss/components/_buttons.scss
+++ b/stylesheets/scss/components/_buttons.scss
@@ -11,126 +11,112 @@ $raised-dense-size: rem-calc(32px); // Default rem-calc(32px)
 $flat-size: rem-calc(36px); // Default rem-calc(36px)
 
 button, input[type="button"], input[type="reset"], input[type="submit"], a {
-	&.sc-raised-button {
-		@include font($font-size-button, 0, $font-weight-button, $line-height-button, $font-color-button, $letter-spacing-button, uppercase);
-		@include button( rem-calc(2px) );
-		@include transition(
-				box-shadow $transition-small-duration $basic-transition unquote(',')
-				background $transition-small-duration $basic-transition
-		);
-		@include material-shadow(2);
-		background: $raised-background;
-		color: $raised-font-color;
-		height: $raised-size;
-		line-height: $raised-size;
-		min-width: rem-calc(88px);
-		padding: 0 rem-calc(16px);
-
-		@media #{$medium-only} {
-			@include transition(
-					box-shadow $transition-medium-duration $basic-transition unquote(',')
-					background $transition-medium-duration $basic-transition
-			);
-		}
-
-		@media #{$medium-up} {
-			@include material-shadow(0);
-			@include transition(
-					box-shadow $transition-large-duration $basic-transition unquote(',')
-					background $transition-large-duration $basic-transition
-			);
-		}
-
-		&:active {
-			@include material-shadow(8);
-
-			@if $theme == dark {
-				background: color($raised-background, 700);
-			}
-		}
-
-		&:hover {
+	@if( in-array( 'raised', $button ) ) {
+		&.sc-raised-button {
+			@include font($font-size-button, 0, $font-weight-button, $line-height-button, $font-color-button, $letter-spacing-button, uppercase);
+			@include button(rem-calc(2px));
+			@include material-shadow(2);
+			background: $raised-background;
 			color: $raised-font-color;
+			height: $raised-size;
+			line-height: $raised-size;
+			min-width: rem-calc(88px);
+			padding: 0 rem-calc(16px);
+			@include transition(
+					box-shadow $transition-small-duration $basic-transition unquote(',') background $transition-small-duration $basic-transition
+			);
 
-			// Add shadow overlay
-			&:before {
-				position: absolute;
-				@include border-radius(rem-calc(2px));
-				top: 0;
-				left: 0;
-				right: 0;
-				bottom: 0;
-				content: '';
-				background: rgba($black, .12);
-				@media #{$medium-up} {
-					@include material-shadow(2);
+			@media #{$medium-only} {
+				@include transition(
+						box-shadow $transition-medium-duration $basic-transition unquote(',') background $transition-medium-duration $basic-transition
+				);
+			}
+
+			@media #{$medium-up} {
+				@include material-shadow(0);
+				@include transition(
+						box-shadow $transition-large-duration $basic-transition unquote(',') background $transition-large-duration $basic-transition
+				);
+			}
+
+			&:active {
+				@include material-shadow(8);
+
+				@if $theme == dark {
+					background: color($raised-background, 700);
 				}
 			}
-		}
-
-		.material-icons {
-			color: $raised-icon-color;
-			@include square($raised-size);
-			line-height: $raised-size;
-			vertical-align: middle;
-		}
-
-		&-dense {
-			font-size: rem-calc(13px);
-			height: $raised-dense-size;
-			line-height: $raised-dense-size;
-
-			.material-icons {
-				@include square($raised-dense-size);
-				line-height: $raised-dense-size;
-			}
-		}
-
-		&-disabled, &:disabled {
-			background: $raised-disabled-background;
-			color: $raised-disabled-font-color;
-			@include material-shadow(0);
 
 			&:hover {
-				@include material-shadow(0);
+				color: $raised-font-color; // To fix bug of links getting link color on hover
+			}
+
+			.material-icons {
+				color: $raised-icon-color;
+				@include square($raised-size);
+				line-height: $raised-size;
+				vertical-align: middle;
+			}
+
+			&-dense {
+				font-size: rem-calc(13px);
+				height: $raised-dense-size;
+				line-height: $raised-dense-size;
+
+				.material-icons {
+					@include square($raised-dense-size);
+					line-height: $raised-dense-size;
+				}
+			}
+
+			&-disabled, &:disabled {
 				background: $raised-disabled-background;
 				color: $raised-disabled-font-color;
+				@include material-shadow(0);
+
+				&:hover {
+					@include material-shadow(0);
+					background: $raised-disabled-background;
+					color: $raised-disabled-font-color;
+				}
 			}
 		}
 	}
 
-	&.sc-flat-button {
-		@include button(rem-calc(2px));
-		@include font($font-size-button, 0, $font-weight-button, $line-height-button, $font-color-button, $letter-spacing-button, uppercase);
-		background: none;
-		color: $flat-color;
-		height: $flat-size;
-		line-height: $flat-size;
-		min-width: rem-calc(64px);
-		padding: 0 rem-calc(16px);
-
-		&:hover {
+	@if( in-array( 'flat', $button ) ) {
+		&.sc-flat-button {
+			@include button(rem-calc(2px));
+			@include font($font-size-button, 0, $font-weight-button, $line-height-button, $font-color-button, $letter-spacing-button, uppercase);
+			background: none;
 			color: $flat-color;
-		}
-
-		&:active {
-			background: $flat-active-background;
-		}
-
-		.material-icons {
-			color: $flat-icon-color;
 			height: $flat-size;
 			line-height: $flat-size;
-			vertical-align: middle;
-			width: $flat-size;
-		}
-
-		&-disabled, &:disabled {
-			background: none;
-			color: $flat-disabled-color;
+			min-width: rem-calc(64px);
+			padding: 0 rem-calc(16px);
 
 			&:hover {
+				color: $flat-color;
+			}
+
+			&:active {
+				background: $flat-active-background;
+			}
+
+			.material-icons {
+				color: $flat-icon-color;
+				height: $flat-size;
+				line-height: $flat-size;
+				vertical-align: middle;
+				width: $flat-size;
+			}
+
+			&-disabled, &:disabled {
+				background: none;
 				color: $flat-disabled-color;
+
+				&:hover {
+					color: $flat-disabled-color;
+				}
 			}
 		}
 	}
@@ -140,104 +126,107 @@ $floating-size: rem-calc(56px); // Default rem-calc(56px)
 $floating-icon-size: rem-calc(24px); // Default rem-calc(24px)
 $floating-mini-size: rem-calc(40px); // Default rem-calc(40px)
 
-.sc-floating-button {
-	@include font($font-size-button, 0, $font-weight-button, $line-height-button, $font-color-button, $letter-spacing-button, uppercase);
-	@include button( 50% );
-	@include transition(box-shadow $transition-small-duration $basic-transition);
-	@include material-shadow(6);
-	@include square($floating-size);
-	background: $floating-background;
-	line-height: $floating-size;
-	position: relative;
+@if( in-array( 'floating', $button ) ) {
+	.sc-floating-button {
+		@include font($font-size-button, 0, $font-weight-button, $line-height-button, $font-color-button, $letter-spacing-button, uppercase);
+		@include button(50%);
+		@include transition(box-shadow $transition-small-duration $basic-transition);
+		@include material-shadow(6);
+		@include square($floating-size);
+		background: $floating-background;
+		line-height: $floating-size;
+		position: relative;
 
-	&:hover {
-		@include material-shadow(12);
-	}
+		&:hover {
+			@include material-shadow(12);
+		}
 
+		.material-icons {
+			@include square($floating-icon-size);
+			color: $floating-icon-color;
+			vertical-align: middle;
+		}
 
-	.material-icons {
-		@include square($floating-icon-size);
-		color: $floating-icon-color;
-		vertical-align: middle;
-	}
+		&-mini {
+			@include square($floating-mini-size);
+			line-height: $floating-mini-size;
+		}
 
-	&-mini {
-		@include square($floating-mini-size);
-		line-height: $floating-mini-size;
-	}
-
-
-
-	ul li {
-		@include border-radius(50%);
-		visibility: hidden;
-		@include opacity(0);
-		@include square( calc( (#{$floating-size} / 10 ) * 7 ) );
+		ul li {
+			@include border-radius(50%);
+			visibility: hidden;
+			@include opacity(0);
+			@include square(calc((#{$floating-size} / 10) * 7));
+		}
 	}
 }
 
 $toggle-size: rem-calc(40px);
 $toggle-icon-size: rem-calc(24px);
 
-.sc-toggle-button {
-	@include button( 50% );
-	@include square($toggle-size);
-	background: $floating-background;
-	color: $floating-icon-color;
-	line-height: $toggle-size;
-
-	.material-icons {
-		@include square($toggle-icon-size);
+@if( in-array( 'toggle', $button ) ) {
+	.sc-toggle-button {
+		@include button(50%);
+		@include square($toggle-size);
+		background: $floating-background;
 		color: $floating-icon-color;
-		vertical-align: middle;
+		line-height: $toggle-size;
+
+		.material-icons {
+			@include square($toggle-icon-size);
+			color: $floating-icon-color;
+			vertical-align: middle;
+		}
 	}
 }
 
-.sc-hover-ripple {
-	overflow: hidden;
-	position: relative;
-	z-index: 1;
+@if( in-array( 'ripple', $button ) ) {
+	.sc-hover-ripple {
+		overflow: hidden;
+		position: relative;
+		z-index: 1;
 
-	&:hover {
-		&:after {
-			@include animation(beat 3s ease-in-out infinite);
+		&:hover {
+			&:after {
+				@include animation(beat 3s ease-in-out infinite);
 
-			@include keyframes(beat) {
-				0%, 50%, 100% {
-					@include transform(scale(1) translateZ(0));
+				@include keyframes(beat) {
+					0%, 50%, 100% {
+						@include transform(scale(1) translateZ(0));
+					}
+					25%, 75% {
+						@include transform(scale(.98) translateZ(0));
+					}
 				}
-				25%, 75% {
-					@include transform(scale(.98) translateZ(0));
-				}
+			}
+
+			&:before {
+				background: rgba($black, .12);
+				content: "";
+				height: 100%;
+				margin: 0px -50%;
+				position: absolute;
+				width: 150%;
+				z-index: -2;
 			}
 		}
 
-		&:before {
-			background: rgba($black, .12);
+		&:after {
+			background: $main-color;
+			border-radius: 50%;
 			content: "";
-			height: 100%;
-			margin: 0px -50%;
+			height: 0;
+			left: 50%;
+			margin: -45%;
+			opacity: 1;
+			padding-top: 70%;
 			position: absolute;
-			width: 150%;
-			z-index: -2;
+			top: 100%;
+			width: 90%;
+			z-index: -1;
+			@include transform(scale(0) translateZ(0));
+			@include transition(all .2s ease-in-out);
+			object-fit: contain;
 		}
-	}
-
-	&:after {
-		background: $main-color;
-		border-radius: 50%;
-		content: "";
-		height: 0;
-		left: 50%;
-		margin: -45%;
-		opacity: 1;
-		padding-top: 70%;
-		position: absolute;
-		top: 100%;
-		width: 90%;
-		z-index: -1;
-		@include transform(scale(0) translateZ(0));
-		@include transition(all .2s ease-in-out);
-		object-fit: contain;
 	}
 }
