--- a/stylesheets/scss/components/_selection.scss
+++ b/stylesheets/scss/components/_selection.scss
@@ -30,129 +30,126 @@ input[type="checkbox"].sc-checkbox, input[type="radio"].sc-radio {
 	}
 }
 
-input[type="checkbox"].sc-checkbox {
-	// Off
-	+ label:before {
-		@include border-radius(rem-calc(2px));
-		@include transition(background $transition-small-duration $basic-transition unquote(',')
-							content $transition-small-duration $basic-transition unquote(',')
-							border $transition-small-duration $basic-transition);
+@if( in-array( 'checkbox', $selection ) ) {
+	input[type="checkbox"].sc-checkbox {
+		// Off
+		+ label:before {
+			@include border-radius(rem-calc(2px));
+			@include transition(background $transition-small-duration $basic-transition unquote(',') content $transition-small-duration $basic-transition unquote(',') border $transition-small-duration $basic-transition);
 
-		@media #{$medium-only} {
-			@include transition(background $transition-medium-duration $basic-transition unquote(',')
-								content $transition-medium-duration $basic-transition unquote(',')
-								border $transition-medium-duration $basic-transition);
+			@media #{$medium-only} {
+				@include transition(background $transition-medium-duration $basic-transition unquote(',') content $transition-medium-duration $basic-transition unquote(',') border $transition-medium-duration $basic-transition);
+			}
+
+			@media #{$medium-up} {
+				@include transition(background $transition-large-duration $basic-transition unquote(',') content $transition-large-duration $basic-transition unquote(',') border $transition-large-duration $basic-transition);
+			}
 		}
 
-		@media #{$medium-up} {
-			@include transition(background $transition-large-duration $basic-transition unquote(',')
-								content $transition-large-duration $basic-transition unquote(',')
-								border $transition-large-duration $basic-transition);
-		}
-	}
-
-	// On
-	&:checked + label:before {
-		background: $selection-active-color;
-		border: $selection-border-size solid $selection-active-color;
-		content: '\E5CA';
-		color: $background;
-	}
-
-	// Disabled off
-	&:disabled + label:before {
-		border: $selection-border-size solid $selection-disabled-color;
-	}
-
-	// Disabled on
-	&:disabled:checked + label:before {
-		background: $selection-disabled-color;
-		border: none;
-		@include square( calc( #{$selection-size} + (#{$selection-border-size} * 2) ) );
-		line-height: calc( #{$selection-size} + (#{$selection-border-size} * 2) );
-		text-align: center;
-	}
-
-	// Radial
-	/*@media #{$medium-down} {
-		&:active + label:after {
-			display: inline-block;
-			content: '';
-			@include square(calc(#{$selection-size} * 2));
-			@include border-radius(50%);
-			position: relative;
-			top: $selection-size;
-			left: calc(#{$selection-size} * -2);
-			background: rgba($black, .2);
+		// On
+		&:checked + label:before {
+			background: $selection-active-color;
+			border: $selection-border-size solid $selection-active-color;
+			content: '\E5CA';
+			color: $background;
 		}
 
-		&:checked:active + label:after {
-			background: rgba($main-color, .2);
+		// Disabled off
+		&:disabled + label:before {
+			border: $selection-border-size solid $selection-disabled-color;
 		}
-	}*/
+
+		// Disabled on
+		&:disabled:checked + label:before {
+			background: $selection-disabled-color;
+			border: none;
+			@include square(calc(#{$selection-size} + (#{$selection-border-size} * 2)));
+			line-height: calc(#{$selection-size} + (#{$selection-border-size} * 2));
+			text-align: center;
+		}
+
+		// Radial
+		/*@media #{$medium-down} {
+			&:active + label:after {
+				display: inline-block;
+				content: '';
+				@include square(calc(#{$selection-size} * 2));
+				@include border-radius(50%);
+				position: relative;
+				top: $selection-size;
+				left: calc(#{$selection-size} * -2);
+				background: rgba($black, .2);
+			}
+
+			&:checked:active + label:after {
+				background: rgba($main-color, .2);
+			}
+		}*/
+	}
 }
 
-input[type="radio"].sc-radio {
-	// Off
-	+ label {
-		&:before {
-			@include border-radius(50%);
-			@include transition(all $transition-small-duration $basic-transition);
+@if( in-array( 'raio', $selection ) ) {
+	input[type="radio"].sc-radio {
+		// Off
+		+ label {
+			&:before {
+				@include border-radius(50%);
+				@include transition(all $transition-small-duration $basic-transition);
 
-			@media #{$medium-only} {
-				@include transition(all $transition-medium-duration $basic-transition);
+				@media #{$medium-only} {
+					@include transition(all $transition-medium-duration $basic-transition);
+				}
+
+				@media #{$medium-up} {
+					@include transition(all $transition-large-duration $basic-transition);
+				}
 			}
 
-			@media #{$medium-up} {
-				@include transition(all $transition-large-duration $basic-transition);
+			&:after {
+				display: inline-block;
+				position: relative;
+				top: calc((#{$selection-size} / 3) * -1);
+				left: calc((#{$selection-size} / 3) * -2);
+				@include square(0);
+				content: '';
+				@include border-radius(50%);
+
+				@include transition(all $transition-small-duration $basic-transition);
+
+				@media #{$medium-only} {
+					@include transition(all $transition-medium-duration $basic-transition);
+				}
+
+				@media #{$medium-up} {
+					@include transition(all $transition-large-duration $basic-transition);
+				}
 			}
 		}
 
-		&:after {
-			display: inline-block;
-			position: relative;
-			top: calc( (#{$selection-size} / 3) * -1);
-			left: calc( (#{$selection-size} / 3) * -2);
-			@include square(0);
-			content: '';
-			@include border-radius(50%);
-
-			@include transition(all $transition-small-duration $basic-transition);
-
-			@media #{$medium-only} {
-				@include transition(all $transition-medium-duration $basic-transition);
+		// On
+		&:checked + label {
+			&:before {
+				border: rem-calc(2px) solid $selection-active-color;
 			}
 
-			@media #{$medium-up} {
-				@include transition(all $transition-large-duration $basic-transition);
+			&:after {
+				background: $selection-active-color;
+				top: rem-calc(1px);
+				left: calc(#{$selection-size} * -1);
+				@include square(calc((#{$selection-size} / 3) * 2));
+				margin: 0 calc((#{$selection-size} / 3) * -2) 0 0;
 			}
 		}
-	}
 
-	// On
-	&:checked + label {
-		&:before {
-			border: rem-calc(2px) solid $selection-active-color;
+		// Disabled off
+		&:disabled + label:before {
+			border: $selection-border-size solid $selection-disabled-color;
 		}
 
-		&:after {
-			background: $selection-active-color;
-			top: rem-calc(1px);
-			left: calc( #{$selection-size} * -1);
-			@include square(calc( (#{$selection-size} / 3) * 2 ));
-			margin: 0 calc( (#{$selection-size} / 3) * -2 ) 0 0;
+		// Disabled on
+		&:disabled:checked + label:after {
+			background: $selection-disabled-color;
 		}
-	}
-
-
-	// Disabled off
-	&:disabled + label:before {
-		border: $selection-border-size solid $selection-disabled-color;
-	}
-
-	// Disabled on
-	&:disabled:checked + label:after {
-		background: $selection-disabled-color;
 	}
 }
 
@@ -166,127 +163,121 @@ $switch-thumb-radial-top: calc( ( #{$switch-track-height} - #{$switch-thumb-radi
 $switch-thumb-radial-left: calc( #{$switch-thumb-size} / -2 );
 $switch-thumb-radial-left-active: calc( #{$switch-thumb-left} - ( #{$switch-thumb-size} / 2 ) );
 
-.sc-switch {
-	// Track
-	.sc-lever {
-		background: $switch-track-background;
-		display: inline-block;
-		height: $switch-track-height;
-		margin: calc( #{$switch-thumb-radial-size} / 2 );
-		@include border-radius($switch-track-height);
-		position: relative;
-		vertical-align: middle;
-		width: $switch-track-width; // To accommodate for radial
-		@include transition(background $transition-small-duration $basic-transition);
-
-		@media #{$medium-only} {
-			@include transition(background $transition-medium-duration $basic-transition);
-		}
-
-		@media #{$medium-up} {
-			@include transition(background $transition-large-duration $basic-transition);
-			margin: 0;
-		}
-
-		// Thumb
-		&:after {
-			@include material-shadow(1);
-			background: $switch-thumb-background;
-			content: '';
-			@include border-radius(50%);
-			height: $switch-thumb-size;
-			left: 0;
-			position: absolute;
-			top: $switch-thumb-top;
-			width: $switch-thumb-size;
-			@include transition(background $transition-small-duration $basic-transition unquote(',') left $transition-small-duration $basic-transition);
+@if( in-array( 'switch', $selection ) ) {
+	.sc-switch {
+		// Track
+		.sc-lever {
+			background: $switch-track-background;
+			display: inline-block;
+			height: $switch-track-height;
+			margin: calc(#{$switch-thumb-radial-size} / 2);
+			@include border-radius($switch-track-height);
+			position: relative;
+			vertical-align: middle;
+			width: $switch-track-width; // To accommodate for radial
+			@include transition(background $transition-small-duration $basic-transition);
 
 			@media #{$medium-only} {
-				@include transition(background $transition-medium-duration $basic-transition unquote(',') left $transition-medium-duration $basic-transition);
+				@include transition(background $transition-medium-duration $basic-transition);
 			}
 
 			@media #{$medium-up} {
-				@include transition(background $transition-large-duration $basic-transition unquote(',') left $transition-large-duration $basic-transition);
+				@include transition(background $transition-large-duration $basic-transition);
+				margin: 0;
 			}
-		}
 
-		// Radial
-		@media #{$medium-down} {
-			&:before {
+			// Thumb
+			&:after {
+				@include material-shadow(1);
+				background: $switch-thumb-background;
 				content: '';
-				width: $switch-thumb-size;
-				height: $switch-thumb-size;
 				@include border-radius(50%);
-				left: $switch-thumb-left;
+				height: $switch-thumb-size;
+				left: 0;
 				position: absolute;
 				top: $switch-thumb-top;
-				@include transition(
-						background $transition-small-duration $basic-transition unquote(',')
-						left $transition-small-duration $basic-transition unquote(',')
-						width $transition-small-duration $basic-transition unquote(',')
-						height $transition-small-duration $basic-transition unquote(',')
-						top $transition-small-duration $basic-transition
-				);
+				width: $switch-thumb-size;
+				@include transition(background $transition-small-duration $basic-transition unquote(',') left $transition-small-duration $basic-transition);
 
 				@media #{$medium-only} {
-					@include transition(
-							background $transition-medium-duration $basic-transition unquote(',')
-							left $transition-medium-duration $basic-transition unquote(',')
-							width $transition-medium-duration $basic-transition unquote(',')
-							height $transition-medium-duration $basic-transition unquote(',')
-							top $transition-medium-duration $basic-transition
-					);
+					@include transition(background $transition-medium-duration $basic-transition unquote(',') left $transition-medium-duration $basic-transition);
+				}
+
+				@media #{$medium-up} {
+					@include transition(background $transition-large-duration $basic-transition unquote(',') left $transition-large-duration $basic-transition);
 				}
 			}
 
-			&:active:before, &:focus:before {
-				background: $switch-thumb-radial-background;
-				width: $switch-thumb-radial-size;
-				height: $switch-thumb-radial-size;
-				left: $switch-thumb-radial-left;
-				top: $switch-thumb-radial-top;
+			// Radial
+			@media #{$medium-down} {
+				&:before {
+					content: '';
+					width: $switch-thumb-size;
+					height: $switch-thumb-size;
+					@include border-radius(50%);
+					left: $switch-thumb-left;
+					position: absolute;
+					top: $switch-thumb-top;
+					@include transition(
+							background $transition-small-duration $basic-transition unquote(',') left $transition-small-duration $basic-transition unquote(',') width $transition-small-duration $basic-transition unquote(',') height $transition-small-duration $basic-transition unquote(',') top $transition-small-duration $basic-transition
+					);
+
+					@media #{$medium-only} {
+						@include transition(
+								background $transition-medium-duration $basic-transition unquote(',') left $transition-medium-duration $basic-transition unquote(',') width $transition-medium-duration $basic-transition unquote(',') height $transition-medium-duration $basic-transition unquote(',') top $transition-medium-duration $basic-transition
+						);
+					}
+				}
+
+				&:active:before, &:focus:before {
+					background: $switch-thumb-radial-background;
+					width: $switch-thumb-radial-size;
+					height: $switch-thumb-radial-size;
+					left: $switch-thumb-radial-left;
+					top: $switch-thumb-radial-top;
+				}
 			}
 		}
-	}
 
-	input[type="checkbox"] {
-		display: none;
+		input[type="checkbox"] {
+			display: none;
 
-		&:checked {
-			// Track
-			+ .sc-lever {
-				background: $switch-track-background-active;
+			&:checked {
+				// Track
+				+ .sc-lever {
+					background: $switch-track-background-active;
 
-				// Thumb
-				&:after {
-					background: $switch-thumb-background-active;
-					left: $switch-thumb-left;
-				}
+					// Thumb
+					&:after {
+						background: $switch-thumb-background-active;
+						left: $switch-thumb-left;
+					}
 
-				// Radial
-				@media #{$medium-down} {
-					&:active:before, &:focus:before {
-						left: $switch-thumb-radial-left-active;
-						background: $switch-thumb-radial-background-active;
+					// Radial
+					@media #{$medium-down} {
+						&:active:before, &:focus:before {
+							left: $switch-thumb-radial-left-active;
+							background: $switch-thumb-radial-background-active;
+						}
 					}
 				}
 			}
-		}
 
-		&:disabled {
-			// Track
-			+ .sc-lever {
-				background: $switch-track-disabled-background;
+			&:disabled {
+				// Track
+				+ .sc-lever {
+					background: $switch-track-disabled-background;
 
-				// Thumb
-				&:after {
-					background: $switch-thumb-disabled-background;
-				}
+					// Thumb
+					&:after {
+						background: $switch-thumb-disabled-background;
+					}
 
-				// Radial
-				@media #{$medium-down} {
-					&:active:before, &:focus:before {
-						background: $switch-thumb-radial-disabled-background;
+					// Radial
+					@media #{$medium-down} {
+						&:active:before, &:focus:before {
+							background: $switch-thumb-radial-disabled-background;
+						}
 					}
 				}
 			}
