--- a/stylesheets/scss/components/_sliders.scss
+++ b/stylesheets/scss/components/_sliders.scss
@@ -120,10 +120,12 @@ input[type="range"] {
 			}
 		}
 
-		&.sc-slider-discrete, &.sc-slider-discrete.sc-not-null {
-			@include range-thumb() {
-				background: transparent;
-				border: $slider-track-height solid transparent;
+		@if( in-array( 'discrete', $slider ) ) {
+			&.sc-slider-discrete, &.sc-slider-discrete.sc-not-null {
+				@include range-thumb() {
+					background: transparent;
+					border: $slider-track-height solid transparent;
+				}
 			}
 		}
 
@@ -198,76 +200,84 @@ input[type="range"] {
 		}
 	}
 
-	.sc-slider-bubble {
-		@include border-radius(50%);
-		@include square($slider-thumb-size);
-		background: $slider-bubble-background;
-		border: $slider-track-height solid $slider-bubble-background;
-		bottom: calc( ( #{$slider-thumb-active-size} + ( #{$slider-track-height} * 2 ) ) * -1);
-		color: $slider-bubble-font-color;
-		font-size: 0;
-		margin: 0;
-		position: absolute;
-		z-index: 2;
-		@include transition(background $transition-small-duration $basic-transition unquote(',')
-							width $transition-small-duration $basic-transition unquote(',')
-							height $transition-small-duration $basic-transition unquote(',')
-							border $transition-small-duration $basic-transition unquote(',')
-							bottom $transition-small-duration $basic-transition unquote(',')
-							margin $transition-small-duration $basic-transition unquote(','));
-
-		@media #{$medium-only} {
-			@include transition(background $transition-medium-duration $basic-transition unquote(',')
-								width $transition-medium-duration $basic-transition unquote(',')
-								height $transition-medium-duration $basic-transition unquote(',')
-								border $transition-medium-duration $basic-transition unquote(',')
-								bottom $transition-medium-duration $basic-transition unquote(',')
-								margin $transition-medium-duration $basic-transition unquote(','));
-		}
-
-		@media #{$medium-up} {
-			@include transition(background $transition-large-duration $basic-transition unquote(',')
-								width $transition-large-duration $basic-transition unquote(',')
-								height $transition-large-duration $basic-transition unquote(',')
-								border $transition-large-duration $basic-transition unquote(',')
-								bottom $transition-large-duration $basic-transition unquote(',')
-								margin $transition-large-duration $basic-transition unquote(','));
-		}
-
-		&:before {
-			@include square(0);
-			border-left: none;
-			border-right: none;
-			border-top: none;
-			content: '';
+	@if( in-array( 'discrete', $slider ) ) {
+		.sc-slider-bubble {
+			@include border-radius(50%);
+			@include square($slider-thumb-size);
+			background: $slider-bubble-background;
+			border: $slider-track-height solid $slider-bubble-background;
+			bottom: calc((#{$slider-thumb-active-size} + (#{$slider-track-height} * 2)) * -1);
+			color: $slider-bubble-font-color;
+			font-size: 0;
+			margin: 0;
 			position: absolute;
-			right: 0;
-			top: 0;
-			@include transition(border-left $transition-small-duration $basic-transition unquote(',')
-								border-right $transition-small-duration $basic-transition unquote(',')
-								border-top $transition-small-duration $basic-transition unquote(',')
-								top $transition-small-duration $basic-transition unquote(','));
+			z-index: 2;
+			@include transition(background $transition-small-duration $basic-transition unquote(',')
+								width $transition-small-duration $basic-transition unquote(',')
+								height $transition-small-duration $basic-transition unquote(',')
+								border $transition-small-duration $basic-transition unquote(',')
+								bottom $transition-small-duration $basic-transition unquote(',')
+								margin $transition-small-duration $basic-transition unquote(',')
+			);
 
 			@media #{$medium-only} {
-				@include transition(border-left $transition-medium-duration $basic-transition unquote(',')
-									border-right $transition-medium-duration $basic-transition unquote(',')
-									border-top $transition-medium-duration $basic-transition unquote(',')
-									top $transition-medium-duration $basic-transition unquote(','));
+				@include transition(background $transition-medium-duration $basic-transition unquote(',')
+									width $transition-medium-duration $basic-transition unquote(',')
+									height $transition-medium-duration $basic-transition unquote(',')
+									border $transition-medium-duration $basic-transition unquote(',')
+									bottom $transition-medium-duration $basic-transition unquote(',')
+									margin $transition-medium-duration $basic-transition unquote(',')
+				);
 			}
 
 			@media #{$medium-up} {
-				@include transition(border-left $transition-large-duration $basic-transition unquote(',')
-									border-right $transition-large-duration $basic-transition unquote(',')
-									border-top $transition-large-duration $basic-transition unquote(',')
-									top $transition-large-duration $basic-transition unquote(','));
+				@include transition(background $transition-large-duration $basic-transition unquote(',')
+									width $transition-large-duration $basic-transition unquote(',')
+									height $transition-large-duration $basic-transition unquote(',')
+									border $transition-large-duration $basic-transition unquote(',')
+									bottom $transition-large-duration $basic-transition unquote(',')
+									margin $transition-large-duration $basic-transition unquote(',')
+				);
 			}
-		}
 
-		&.sc-not-null {
-			background: $slider-on-color;
-			border: $slider-track-height solid $slider-on-color;
-			color: $slider-bubble-font-color;
-			font-size: 0;
+			&:before {
+				@include square(0);
+				border-left: none;
+				border-right: none;
+				border-top: none;
+				content: '';
+				position: absolute;
+				right: 0;
+				top: 0;
+				@include transition(border-left $transition-small-duration $basic-transition unquote(',')
+									border-right $transition-small-duration $basic-transition unquote(',')
+									border-top $transition-small-duration $basic-transition unquote(',')
+									top $transition-small-duration $basic-transition unquote(',')
+				);
+
+				@media #{$medium-only} {
+					@include transition(border-left $transition-medium-duration $basic-transition unquote(',')
+										border-right $transition-medium-duration $basic-transition unquote(',')
+										border-top $transition-medium-duration $basic-transition unquote(',')
+										top $transition-medium-duration $basic-transition unquote(',')
+					);
+				}
+
+				@media #{$medium-up} {
+					@include transition(border-left $transition-large-duration $basic-transition unquote(',')
+										border-right $transition-large-duration $basic-transition unquote(',')
+										border-top $transition-large-duration $basic-transition unquote(',')
+										top $transition-large-duration $basic-transition unquote(',')
+					);
+				}
+			}
+
+			&.sc-not-null {
+				background: $slider-on-color;
+				border: $slider-track-height solid $slider-on-color;
+				color: $slider-bubble-font-color;
+				font-size: 0;
+			}
 		}
 	}
 
@@ -285,10 +295,12 @@ input[type="range"] {
 				}
 			}
 
-			&.sc-slider-discrete {
-				@include range-thumb() {
-					background: transparent;
-					border: $slider-track-height solid transparent;
+			@if( in-array( 'discrete', $slider ) ) {
+				&.sc-slider-discrete {
+					@include range-thumb() {
+						background: transparent;
+						border: $slider-track-height solid transparent;
+					}
 				}
 			}
 		}
@@ -302,15 +314,17 @@ input[type="range"] {
 			border: $slider-track-height solid $background;
 		}
 
-		&:active, &:focus {
-			.sc-slider-bubble {
-				background: $slider-off-color;
-				border: none;
+		@if( in-array( 'discrete', $slider ) ) {
+			&:active, &:focus {
+				.sc-slider-bubble {
+					background: $slider-off-color;
+					border: none;
 
-				&:before {
-					border-left: $slider-triangle-border-hidden;
-					border-right: $slider-triangle-border-hidden;
-					border-top: $slider-triangle-size solid $slider-off-color;
+					&:before {
+						border-left: $slider-triangle-border-hidden;
+						border-right: $slider-triangle-border-hidden;
+						border-top: $slider-triangle-size solid $slider-off-color;
+					}
 				}
 			}
 		}
