--- a/stylesheets/scss/components/_tooltips.scss
+++ b/stylesheets/scss/components/_tooltips.scss
@@ -16,6 +16,7 @@ $tooltip-large-padding: 0 rem-calc(8px); // Default 0 rem-calc(8px)
 	position: relative;
 
 	&:after {
+		content: '';
 		background: $tooltip-background;
 		color: $tooltip-font-color;
 		font-size: rem-calc(14px);
@@ -30,23 +31,46 @@ $tooltip-large-padding: 0 rem-calc(8px); // Default 0 rem-calc(8px)
 		white-space: nowrap;
 		width: auto;
 		z-index: 10;
+		@include opacity(0);
+		visibility: hidden;
+		@include transition(top $transition-small-duration $basic-transition unquote(',')
+							margin $transition-small-duration $basic-transition);
+
+		@media #{$medium-only} {
+			@include transition(top $transition-medium-duration $basic-transition unquote(',')
+								margin $transition-medium-duration $basic-transition);
+		}
 
 		@media #{$medium-up} {
 			font-size: rem-calc(10px);
 			height: $tooltip-large-height;
 			line-height: $tooltip-large-height;
 			padding: $tooltip-large-padding;
+			@include transition(top $transition-large-duration $basic-transition unquote(',')
+								margin $transition-large-duration $basic-transition);
 		}
 	}
 
-	&:hover {
-		&:after {
-			content: attr(title);
-			top: $tooltip-small-top;
+	&:hover:after {
+		@include opacity(1);
+		visibility: visible;
+		content: attr(title);
+		top: $tooltip-small-top;
+		margin: $tooltip-small-top 0 0 0;
+
+		@media #{$medium-up} {
+			top: $tooltip-large-top;
+			margin: $tooltip-large-top 0 0 0;
+		}
+	}
+
+	&.sc-raised-button, .sc-flat-button {
+		&:hover:after {
+			top: $raised-size;
 			margin: $tooltip-small-top 0 0 0;
 
 			@media #{$medium-up} {
-				top: $tooltip-large-top;
+				top: $raised-size;
 				margin: $tooltip-large-top 0 0 0;
 			}
 		}
