--- a/stylesheets/scss/components/_navigation-drawer.scss
+++ b/stylesheets/scss/components/_navigation-drawer.scss
@@ -86,144 +86,190 @@ $drawer-profile-height: $drawer-padding + $drawer-profile-img + $drawer-profile-
 		}
 	}
 
-	.sc-drawer-header .sc-drawer-profile-more {
-		ul {
-			display: none;
-			top: calc(#{$drawer-item-height} * -1);
-			left: calc((#{$drawer-icon-size} / 2) * -1);
-			padding: rem-calc(8px) 0;
-			@include material-shadow(2);
-			background: $white;
-			@include border-radius(rem-calc(2px));
-			position: relative;
-			z-index: 4;
-			visibility: hidden;
-			@include opacity(0);
-			max-height: 0;
-			width: 100%;
-			margin: rem-calc(16px);
-			@include transition(visibility $transition-small-duration $basic-transition unquote(',')
-								opacity $transition-small-duration $basic-transition unquote(',')
-								max-height $transition-small-duration $basic-transition);
+	@if( in-array( 'persistent', $navigation-drawer ) or in_array( 'temporary', $navigation-drawer ) ) {
+		.sc-drawer-header .sc-drawer-profile-more {
+			ul {
+				display: none;
+				top: calc(#{$drawer-item-height} * -1);
+				left: calc((#{$drawer-icon-size} / 2) * -1);
+				padding: rem-calc(8px) 0;
+				@include material-shadow(2);
+				background: $white;
+				@include border-radius(rem-calc(2px));
+				position: relative;
+				z-index: 4;
+				visibility: hidden;
+				@include opacity(0);
+				max-height: 0;
+				width: 100%;
+				margin: rem-calc(16px);
+				@include transition(visibility $transition-small-duration $basic-transition unquote(',') opacity $transition-small-duration $basic-transition unquote(',') max-height $transition-small-duration $basic-transition);
 
-			@media #{$small-up} {
-				margin: rem-calc(24px);
-			}
+				@media #{$small-up} {
+					margin: rem-calc(24px);
+				}
 
-			@media #{$medium-only} {
-				@include transition(visibility $transition-medium-duration $basic-transition unquote(',')
-									opacity $transition-medium-duration $basic-transition unquote(',')
-									max-height $transition-medium-duration $basic-transition);
-			}
+				@media #{$medium-only} {
+					@include transition(visibility $transition-medium-duration $basic-transition unquote(',') opacity $transition-medium-duration $basic-transition unquote(',') max-height $transition-medium-duration $basic-transition);
+				}
 
-			@media #{$medium-up} {
-				@include transition(visibility $transition-large-duration $basic-transition unquote(',')
-									opacity $transition-large-duration $basic-transition unquote(',')
-									max-height $transition-large-duration $basic-transition);
-			}
+				@media #{$medium-up} {
+					@include transition(visibility $transition-large-duration $basic-transition unquote(',') opacity $transition-large-duration $basic-transition unquote(',') max-height $transition-large-duration $basic-transition);
+				}
 
-			li {
-				height: $drawer-item-height;
-				font-size: rem-calc(16px);
-				padding: 0 rem-calc(16px) rem-calc(20px) rem-calc(16px);
+				li {
+					height: $drawer-item-height;
+					font-size: rem-calc(16px);
+					padding: 0 rem-calc(16px) rem-calc(20px) rem-calc(16px);
 
-				&:hover {
-					background: none;
+					&:hover {
+						background: none;
+					}
 				}
 			}
-		}
 
-		&.sc-expanded {
-			ul {
-				display: block;
-				visibility: visible;
-				@include opacity(1);
-				max-height: 100%;
+			&.sc-expanded {
+				ul {
+					display: block;
+					visibility: visible;
+					@include opacity(1);
+					max-height: 100%;
+				}
 			}
 		}
 	}
 
 	&-permanent {
-		&-full-height {
+		@if( in-array( 'full-height', $navigation-drawer ) ) {
+			&-full-height {
+				top: 0;
+				border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+				z-index: 3;
+
+				.sc-drawer-header {
+					padding: rem-calc(16px) rem-calc(16px) rem-calc(8px) rem-calc(16px);
+					border-bottom: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+					height: $appbar-small-height;
+
+					@media #{$medium-only} {
+						height: $appbar-medium-height;
+					}
+
+					@media #{$medium-up} {
+						height: $appbar-large-height;
+					}
+				}
+			}
+		}
+
+		@if( in-array( 'clipped', $navigation-drawer ) ) {
+			&-clipped {
+				top: $appbar-small-height;
+				z-index: 1;
+				border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+
+				@media #{$medium-only} {
+					top: $appbar-medium-height;
+				}
+
+				@media #{$medium-up} {
+					top: $appbar-large-height;
+				}
+
+				li:first-of-type {
+					margin: $drawer-profile-bottom-padding 0 0 0;
+				}
+			}
+		}
+
+		@if( in-array( 'floating', $navigation-drawer ) ) {
+			&-floating {
+				top: $appbar-small-height;
+				z-index: 1;
+
+				@media #{$medium-only} {
+					top: $appbar-medium-height;
+				}
+
+				@media #{$medium-up} {
+					top: $appbar-large-height;
+				}
+
+				li:first-of-type {
+					margin: $drawer-profile-bottom-padding 0 0 0;
+				}
+			}
+		}
+	}
+
+	@if( in-array( 'persistent', $navigation-drawer ) ) {
+		&-persistent {
 			top: 0;
 			border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
 			z-index: 3;
 
 			.sc-drawer-header {
-				padding: rem-calc(16px) rem-calc(16px) rem-calc(8px) rem-calc(16px);
-				border-bottom: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
 				height: $appbar-small-height;
+				line-height: $appbar-small-height;
+				margin: 0 0 $drawer-profile-bottom-padding 0;
+				border-bottom: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
 
 				@media #{$medium-only} {
 					height: $appbar-medium-height;
+					line-height: $appbar-medium-height;
 				}
 
 				@media #{$medium-up} {
 					height: $appbar-large-height;
+					line-height: $appbar-large-height;
 				}
-			}
-		}
 
-		&-clipped {
-			top: $appbar-small-height;
-			z-index: 1;
-			border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+				> * {
+					float: left;
+				}
 
-			@media #{$medium-only} {
-				top: $appbar-medium-height;
-			}
-
-			@media #{$medium-up} {
-				top: $appbar-large-height;
-			}
-
-			li:first-of-type {
-				margin: $drawer-profile-bottom-padding 0 0 0;
-			}
-		}
-
-		&-floating {
-			top: $appbar-small-height;
-			z-index: 1;
-
-			@media #{$medium-only} {
-				top: $appbar-medium-height;
-			}
-
-			@media #{$medium-up} {
-				top: $appbar-large-height;
-			}
-
-			li:first-of-type {
-				margin: $drawer-profile-bottom-padding 0 0 0;
+				.sc-drawer-profile-img {
+					@include square($drawer-icon-size);
+					margin: 0 calc(#{rem-calc(72px)} - #{$drawer-icon-size} - #{$drawer-padding}) 0 0;
+					@include border-radius(50%);
+					border: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+					top: 50%;
+					position: inherit;
+					@include transform(translate(0, -50%));
+				}
 			}
 		}
 	}
 
-	&-persistent {
-		top: 0;
-		border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
-		z-index: 3;
+	/*&-persistent-mini {
+		top: $appbar-small-height;
+
+		// Add extra width for scrollbar TODO somehow fix it
+		width: calc( (#{$drawer-padding} * 2) + #{$drawer-icon-size} + #{rem-calc(3px)});
+
+		@media #{$small-up} {
+			width: calc( (#{$drawer-padding} * 2) + #{$drawer-icon-size} + #{rem-calc(10px)});
+		}
+
+		@media #{$medium-only} {
+			top: $appbar-medium-height;
+		}
+
+		@media #{$medium-up} {
+			top: $appbar-large-height;
+		}
+
+		li:first-of-type {
+			margin: rem-calc(8px) 0 0 0;
+		}
+
+		.sc-divider, .sc-arrow, .sc-drawer-profile-name, .sc-drawer-profile-dropdown, .sc-text {
+			display: none;
+		}
 
 		.sc-drawer-header {
-			height: $appbar-small-height;
-			line-height: $appbar-small-height;
-			margin: 0 0 $drawer-profile-bottom-padding 0;
-			border-bottom: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
-
-			@media #{$medium-only} {
-				height: $appbar-medium-height;
-				line-height: $appbar-medium-height;
-			}
-
-			@media #{$medium-up} {
-				height: $appbar-large-height;
-				line-height: $appbar-large-height;
-			}
-
-			> * {
-				float: left;
-			}
+			height: rem-calc(48px);
+			line-height: rem-calc(48px);
 
 			.sc-drawer-profile-img {
 				@include square($drawer-icon-size);
@@ -235,162 +281,121 @@ $drawer-profile-height: $drawer-padding + $drawer-profile-img + $drawer-profile-
 				@include transform(translate(0, -50%));
 			}
 		}
-	}
-
-	 /*&-persistent-mini {
-		 top: $appbar-small-height;
-
-		 // Add extra width for scrollbar TODO somehow fix it
-		 width: calc( (#{$drawer-padding} * 2) + #{$drawer-icon-size} + #{rem-calc(3px)});
-
-		 @media #{$small-up} {
-			 width: calc( (#{$drawer-padding} * 2) + #{$drawer-icon-size} + #{rem-calc(10px)});
-		 }
-
-		 @media #{$medium-only} {
-			 top: $appbar-medium-height;
-		 }
-
-		 @media #{$medium-up} {
-			 top: $appbar-large-height;
-		 }
-
-		 li:first-of-type {
-			 margin: rem-calc(8px) 0 0 0;
-		 }
-
-		 .sc-divider, .sc-arrow, .sc-drawer-profile-name, .sc-drawer-profile-dropdown, .sc-text {
-			 display: none;
-		 }
-
-		 .sc-drawer-header {
-			 height: rem-calc(48px);
-			 line-height: rem-calc(48px);
-
-			 .sc-drawer-profile-img {
-				 @include square($drawer-icon-size);
-				 margin: 0 calc(#{rem-calc(72px)} - #{$drawer-icon-size} - #{$drawer-padding}) 0 0;
-				 @include border-radius(50%);
-				 border: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
-				 top: 50%;
-				 position: inherit;
-				 @include transform(translate(0, -50%));
-			 }
-		 }
-
-		 &.sc-expanded {
-			 width: 100%;
-			 top: 0;
-			 border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
-			 z-index: 3;
-
-			 .sc-drawer-header {
-				 position: relative;
-				 height: $appbar-small-height;
-				 line-height: $appbar-small-height;
-				 margin: 0 0 rem-calc(8px) 0;
-				 border-bottom: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
-
-				 @media #{$medium-only} {
-					 height: $appbar-medium-height;
-					 line-height: $appbar-medium-height;
-				 }
-
-				 @media #{$medium-up} {
-					 height: $appbar-large-height;
-					 line-height: $appbar-large-height;
-				 }
-
-				 &:hover {
-					 background: none;
-				 }
-
-				 > * {
-					 float: left;
-				 }
-			}
-		}
-	 }*/
-
-
-	&-temporary {
-		top: 0;
-		z-index: 3;
-		@include material-shadow(16);
-
-		.sc-drawer-header {
-			padding: 0 0 $drawer-profile-bottom-padding 0;
-			margin: 0 0 $drawer-profile-bottom-padding 0;
-			height: $drawer-profile-height;
-
-			.sc-drawer-profile-background {
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: $drawer-profile-height;
-			}
-
-			.sc-scrim {
-				background: -moz-linear-gradient($drawer-profile-scrim);
-				background: -webkit-linear-gradient($drawer-profile-scrim);
-				background: linear-gradient($drawer-profile-scrim);
-				bottom: $drawer-profile-bottom-padding;
-				content: '';
-				left: 0;
-				position: absolute;
-				right: 0;
-				top: 0;
-				margin: 0 0 -#{$drawer-profile-bottom-padding} 0;
-			}
-
-			.sc-drawer-profile-background, .sc-drawer-profile-img, .sc-drawer-profile-name, .sc-drawer-profile-email, .sc-drawer-profile-more {
-				position: absolute;
-			}
-
-			.sc-drawer-profile-img {
-				top: $drawer-padding;
-				left: $drawer-padding;
-				@include square($drawer-profile-img);
-				@include border-radius(50%);
-			}
-
-			.sc-drawer-profile-name, .sc-drawer-profile-email {
-				line-height: calc(#{$drawer-profile-content-height} / 2);
-				left: $drawer-padding;
-				height: calc(#{$drawer-profile-content-height} / 2);
-				color: $white;
-			}
-
-			.sc-drawer-profile-name {
-				top: calc(#{$drawer-profile-img} + #{$drawer-padding});
-				font-size: rem-calc(14px);
-				font-weight: 500;
-				right: 0;
-			}
-
-			.sc-drawer-profile-email {
-				top: calc(#{$drawer-profile-img} + #{$drawer-padding} + (#{$drawer-profile-content-height} / 2));
-				font-size: rem-calc(14px);
-				font-weight: 400;
-				right: calc(#{$drawer-profile-content-height} + #{$drawer-padding});
-			}
-
-			.sc-drawer-profile-more {
-				height: calc(#{$drawer-profile-content-height} / 2);
-				line-height: $drawer-profile-content-height;
-				right: $drawer-padding;
-				top: calc(#{$drawer-profile-img} + #{$drawer-padding} + (#{$drawer-profile-content-height} / 2));
-				text-align: right;
-
-				.material-icons {
-					margin: calc((#{$drawer-profile-content-height} / 2) * -1) 0 0 0;
-					color: $white;
-				}
-			}
-		}
 
 		&.sc-expanded {
-			margin: 0;
+			width: 100%;
+			top: 0;
+			border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+			z-index: 3;
+
+			.sc-drawer-header {
+				position: relative;
+				height: $appbar-small-height;
+				line-height: $appbar-small-height;
+				margin: 0 0 rem-calc(8px) 0;
+				border-bottom: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+
+				@media #{$medium-only} {
+					height: $appbar-medium-height;
+					line-height: $appbar-medium-height;
+				}
+
+				@media #{$medium-up} {
+					height: $appbar-large-height;
+					line-height: $appbar-large-height;
+				}
+
+				&:hover {
+					background: none;
+				}
+
+				> * {
+					float: left;
+				}
+		   }
+	   }
+	}*/
+
+	@if( in-array( 'temporary', $navigation-drawer ) ) {
+		&-temporary {
+			top: 0;
+			z-index: 3;
+			@include material-shadow(16);
+
+			.sc-drawer-header {
+				padding: 0 0 $drawer-profile-bottom-padding 0;
+				margin: 0 0 $drawer-profile-bottom-padding 0;
+				height: $drawer-profile-height;
+
+				.sc-drawer-profile-background {
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: $drawer-profile-height;
+				}
+
+				.sc-scrim {
+					background: -moz-linear-gradient($drawer-profile-scrim);
+					background: -webkit-linear-gradient($drawer-profile-scrim);
+					background: linear-gradient($drawer-profile-scrim);
+					bottom: $drawer-profile-bottom-padding;
+					content: '';
+					left: 0;
+					position: absolute;
+					right: 0;
+					top: 0;
+					margin: 0 0 -#{$drawer-profile-bottom-padding} 0;
+				}
+
+				.sc-drawer-profile-background, .sc-drawer-profile-img, .sc-drawer-profile-name, .sc-drawer-profile-email, .sc-drawer-profile-more {
+					position: absolute;
+				}
+
+				.sc-drawer-profile-img {
+					top: $drawer-padding;
+					left: $drawer-padding;
+					@include square($drawer-profile-img);
+					@include border-radius(50%);
+				}
+
+				.sc-drawer-profile-name, .sc-drawer-profile-email {
+					line-height: calc(#{$drawer-profile-content-height} / 2);
+					left: $drawer-padding;
+					height: calc(#{$drawer-profile-content-height} / 2);
+					color: $white;
+				}
+
+				.sc-drawer-profile-name {
+					top: calc(#{$drawer-profile-img} + #{$drawer-padding});
+					font-size: rem-calc(14px);
+					font-weight: 500;
+					right: 0;
+				}
+
+				.sc-drawer-profile-email {
+					top: calc(#{$drawer-profile-img} + #{$drawer-padding} + (#{$drawer-profile-content-height} / 2));
+					font-size: rem-calc(14px);
+					font-weight: 400;
+					right: calc(#{$drawer-profile-content-height} + #{$drawer-padding});
+				}
+
+				.sc-drawer-profile-more {
+					height: calc(#{$drawer-profile-content-height} / 2);
+					line-height: $drawer-profile-content-height;
+					right: $drawer-padding;
+					top: calc(#{$drawer-profile-img} + #{$drawer-padding} + (#{$drawer-profile-content-height} / 2));
+					text-align: right;
+
+					.material-icons {
+						margin: calc((#{$drawer-profile-content-height} / 2) * -1) 0 0 0;
+						color: $white;
+					}
+				}
+			}
+
+			&.sc-expanded {
+				margin: 0;
+			}
 		}
 	}
 
@@ -398,7 +403,7 @@ $drawer-profile-height: $drawer-padding + $drawer-profile-img + $drawer-profile-
 		@media #{$small-down} {
 			&:before {
 				display: block;
-		 		@include opacity(1);
+				@include opacity(1);
 			}
 		}
 	}
